# CoprocesorCodeForNautilus

./: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  README.md  Server.cpp  Server.h  a_star_visualization.py  astar.cpp  astar.h  import socket.py  main.cpp
Client/: CMakeLists.txt  main.cpp
